Bit conversion fixed

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,2 @@
 tunvis: tunvis.cpp
-	g++ -Wall -fexceptions tunvis.cpp tun.cpp -o ../tunvis
+	g++ -Wall -fexceptions tunvis.cpp routing.cpp utils/filter_rules.cpp utils/ipv4_util.cpp utils/tun.cpp -o ../tunvis
